# Jira-Ticket-Database

./: .gitignore  Cargo.toml  Jira.sql  README.md
src/: main.rs
